# Openai-Auto-CPA

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.github/workflows/: docker-ghcr.yml
config/: sync_config.example.json
deploy/cpa/: README.md  config.example.yaml  config.yaml  docker-compose.yml
openai_auto_cpa/: __init__.py  __main__.py  register.py  server.py
openai_auto_cpa/static/: orchestrator-bridge.js
openai_pool_orchestrator/: __init__.py  __main__.py  mail_providers.py  pool_maintainer.py  register.py  server.py
openai_pool_orchestrator/static/: app.js  index.html  orchestrator-bridge.css  orchestrator-bridge.js  style.css
