[project]
name = "Openai-Auto-CPA"
version = "2.0.0"
description = "OpenAI 账号池编排器 — 自动化注册、Token 管理与多平台账号池维护"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
keywords = ["openai", "account-pool", "automation", "token-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "curl-cffi>=0.6",
    "aiohttp>=3.9",
    "requests>=2.31",
]

[project.scripts]
openai-auto-cpa = "openai_auto_cpa.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openai_auto_cpa*"]

[tool.setuptools.package-data]
openai_auto_cpa = ["static/**/*"]
